# a17rgentoo

./: .directory  .gitignore
acct-group/sddm/: sddm-0.ebuild
acct-user/sddm/: sddm-0.ebuild
app-accessibility/simon/: Manifest  simon-0.4.90.ebuild
app-admin/elektra/: Manifest  elektra-0.7.1-r5.ebuild  elektra-0.8.10.ebuild  elektra-0.8.11.ebuild  elektra-0.8.16.ebuild  elektra-0.8.4.ebuild  elektra-0.8.4.ebuild.diff  elektra-0.8.5.ebuild  elektra-0.8.6.ebuild  elektra-0.8.7.ebuild  elektra-0.8.8.ebuild  elektra-9999.ebuild  metadata.xml  metadata.xml.diff
app-admin/packagekit-base/: metadata.xml  packagekit-base-1.1.5-r1.ebuild
app-admin/system-config-printer/: Manifest  system-config-printer-1.5.3.ebuild  system-config-printer-1.5.6.ebuild
app-admin/system-config-printer-common/: Manifest  system-config-printer-common-1.4.3-r1.ebuild  system-config-printer-common-1.5.1.ebuild
app-admin/system-config-printer-gnome/: Manifest  system-config-printer-gnome-1.5.1.ebuild
app-cdr/k3b/: k3b-2.0.3-r4.ebuild  k3b-2.0.80.ebuild  metadata.xml
app-crypt/gpgme/: Manifest  gpgme-1.7.1.ebuild  gpgme-1.8.0-r1.ebuild  gpgme-1.8.0-r2.ebuild  gpgme-1.8.0-r3.ebuild  gpgme-1.9.0-r1.ebuild  gpgme-1.9.0.ebuild  gpgme-9999.ebuild
dev-libs/libopts/files/: Makefile.am  Makefile.am.patch  libopts-add.m4  libopts.m4
dev-qt/qdoc/: Manifest  (+1 more)
eclass/: font.eclass  java-maven-2.eclass  kde4-base.eclass  kde4-meta.eclass  kde5.eclass  mysql-cmake.eclass  mysql-v2.eclass  qt5-build.eclass
licenses/: Eizo
metadata/: layout.conf
profiles/: license_groups  package.mask  repo_name
(+1685 files in other folders)
