## LIBOPTS Makefile
EXTRA_DIST            = COPYING.lgpl COPYING.mbsd compat
MAINTAINERCLEANFILES  = Makefile.in
lib_LTLIBRARIES       = libopts.la
libopts_la_SOURCES    = \
    autoopts.c    autoopts.h    boolean.c     enumeration.c numeric.c  \
    options.h     pgusage.c     restore.c     save.c        stack.c  \
    streqv.h      streqvcmp.c   usage.c       version.c
